[gd_scene load_steps=3 format=3 uid="uid://dlcc18moqt5b0"]

[ext_resource type="Script" path="res://calculadora.gd" id="1_og3c7"]

[sub_resource type="LabelSettings" id="LabelSettings_r1pr6"]
font_size = 35
font_color = Color(0, 0, 0, 1)

[node name="Calculadora" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_og3c7")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -250.0
offset_right = 150.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Display" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 70.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Background/Display"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.5
offset_top = -25.0
offset_right = 149.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_r1pr6")
horizontal_alignment = 2
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Background"]
layout_mode = 0
offset_left = 1.0
offset_top = 104.0
offset_right = 299.0
offset_bottom = 462.0
columns = 4

[node name="AC" type="Button" parent="Background/GridContainer"]
custom_minimum_size = Vector2(71, 75)
layout_mode = 2
text = "AC"

[node name="MaisMenos" type="Button" parent="Background/GridContainer"]
custom_minimum_size = Vector2(71, 75)
layout_mode = 2

[node name="Apagar" type="Button" parent="Background/GridContainer"]
custom_minimum_size = Vector2(71, 75)
layout_mode = 2
text = "<-
"

[node name="Divisão" type="Button" parent="Background/GridContainer"]
custom_minimum_size = Vector2(71, 75)
layout_mode = 2
text = "÷"

[node name="Sete" type="Button" parent="Background/GridContainer"]
custom_minimum_size = Vector2(71, 75)
layout_mode = 2
text = "7"

[node name="Oito" type="Button" parent="Background/GridContainer"]
custom_minimum_size = Vector2(71, 75)
layout_mode = 2
text = "8"

[node name="Nove" type="Button" parent="Background/GridContainer"]
custom_minimum_size = Vector2(71, 75)
layout_mode = 2
text = "9"

[node name="Vezes" type="Button" parent="Background/GridContainer"]
custom_minimum_size = Vector2(71, 75)
layout_mode = 2
text = "X"

[node name="Quatro" type="Button" parent="Background/GridContainer"]
custom_minimum_size = Vector2(71, 75)
layout_mode = 2
text = "4"

[node name="Cinco" type="Button" parent="Background/GridContainer"]
custom_minimum_size = Vector2(71, 75)
layout_mode = 2
text = "5"

[node name="Seis" type="Button" parent="Background/GridContainer"]
custom_minimum_size = Vector2(71, 75)
layout_mode = 2
text = "6"

[node name="Menos" type="Button" parent="Background/GridContainer"]
custom_minimum_size = Vector2(71, 75)
layout_mode = 2
text = "-"

[node name="Um" type="Button" parent="Background/GridContainer"]
custom_minimum_size = Vector2(71, 75)
layout_mode = 2
text = "1"

[node name="Dois" type="Button" parent="Background/GridContainer"]
custom_minimum_size = Vector2(71, 75)
layout_mode = 2
text = "2"

[node name="Três" type="Button" parent="Background/GridContainer"]
custom_minimum_size = Vector2(71, 75)
layout_mode = 2
text = "3"

[node name="Mais" type="Button" parent="Background/GridContainer"]
custom_minimum_size = Vector2(71, 75)
layout_mode = 2
text = "+"

[node name="Porcentagem" type="Button" parent="Background/GridContainer"]
custom_minimum_size = Vector2(71, 75)
layout_mode = 2

[node name="Zero" type="Button" parent="Background/GridContainer"]
custom_minimum_size = Vector2(71, 75)
layout_mode = 2
text = "0"

[node name="Ponto" type="Button" parent="Background/GridContainer"]
custom_minimum_size = Vector2(71, 75)
layout_mode = 2
text = "
"

[node name="Igual" type="Button" parent="Background/GridContainer"]
custom_minimum_size = Vector2(71, 75)
layout_mode = 2
text = "="

[connection signal="pressed" from="Background/GridContainer/AC" to="." method="_on_ac_pressed"]
[connection signal="pressed" from="Background/GridContainer/MaisMenos" to="." method="_on_mais_menos_pressed"]
[connection signal="pressed" from="Background/GridContainer/Apagar" to="." method="_on_apagar_pressed"]
[connection signal="pressed" from="Background/GridContainer/Divisão" to="." method="_on_divisão_pressed"]
[connection signal="pressed" from="Background/GridContainer/Sete" to="." method="_on_sete_pressed"]
[connection signal="pressed" from="Background/GridContainer/Oito" to="." method="_on_oito_pressed"]
[connection signal="pressed" from="Background/GridContainer/Nove" to="." method="_on_nove_pressed"]
[connection signal="pressed" from="Background/GridContainer/Vezes" to="." method="_on_vezes_pressed"]
[connection signal="pressed" from="Background/GridContainer/Quatro" to="." method="_on_quatro_pressed"]
[connection signal="pressed" from="Background/GridContainer/Cinco" to="." method="_on_cinco_pressed"]
[connection signal="pressed" from="Background/GridContainer/Seis" to="." method="_on_seis_pressed"]
[connection signal="pressed" from="Background/GridContainer/Menos" to="." method="_on_menos_pressed"]
[connection signal="pressed" from="Background/GridContainer/Um" to="." method="_on_um_pressed"]
[connection signal="pressed" from="Background/GridContainer/Dois" to="." method="_on_dois_pressed"]
[connection signal="pressed" from="Background/GridContainer/Três" to="." method="_on_três_pressed"]
[connection signal="pressed" from="Background/GridContainer/Mais" to="." method="_on_mais_pressed"]
[connection signal="pressed" from="Background/GridContainer/Porcentagem" to="." method="_on_porcentagem_pressed"]
[connection signal="pressed" from="Background/GridContainer/Zero" to="." method="_on_zero_pressed"]
[connection signal="pressed" from="Background/GridContainer/Ponto" to="." method="_on_ponto_pressed"]
[connection signal="pressed" from="Background/GridContainer/Igual" to="." method="_on_igual_pressed"]
